--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
+* {
+  margin: 0;
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
+
 .App {
-  text-align: center;
+  text-align:center
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.Stripe1 {
+  height: 100px;
+  width: 100%;
+  /* display: flex;
+  justify-content: center; */
+background-color: blueviolet;
+};
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+.Stripe2 {
+  height: 100px;
+  width: 100%;
+  /* display: flex;
+  justify-content: center; */
+background-color: red;
+};
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+.Stripe3 {
+  height: 100px;
+  width: 100%;
+  /* display: flex;
+  justify-content: center; */
+background-color: blue;
+};
+
+.Stripe4 {
+  height: 100px;
+  width: 100%;
+  /* display: flex;
+  justify-content: center; */
+background-color: green;
+};
